[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Other/Question_Controller.gd" type="Script" id=1]
[ext_resource path="res://Fonts/manaspc.ttf" type="DynamicFontData" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 219.92 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 2 )

[node name="Question_Controller" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Question" type="Label" parent="CanvasLayer"]
pause_mode = 2
margin_right = 1000.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
autowrap = true

[node name="A" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_right = 12.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )

[node name="B" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_right = 12.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )

[node name="C" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_right = 12.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )

[node name="D" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_right = 12.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 5 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="button_up" from="CanvasLayer/A" to="." method="_on_A_button_up"]
[connection signal="button_up" from="CanvasLayer/B" to="." method="_on_B_button_up"]
[connection signal="button_up" from="CanvasLayer/C" to="." method="_on_C_button_up"]
[connection signal="button_up" from="CanvasLayer/D" to="." method="_on_D_button_up"]
